Release Notes

* 3/30/2015
  * added S3 stuff provided by KuoHao
  * renamed to Http classes
  * using requests instead of urllib3

* 3/11/2015
  * added vomsrenew.sh
  * various bug fixes

* 3/2/2015
  * first import