@@ -1,0 +1,9 @@
+##########################
+#
+# HTTP parameters
+#
+
+[http]
+
+# remote host config
+hostConfig = aipanda007.cern.ch:25443|pandaserver.cern.ch:25443,ca_certs^/etc/pki/tls/certs/CERN-bundle.pem,key_file^env:X509_USER_PROXY,cert_file^env:X509_USER_PROXY
