@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/1/2015
+  * moved remote host config to cfg
+
 * 3/30/2015
   * added S3 stuff provided by KuoHao
   * renamed to Http classes
